SSIMS_v0.3.1.3 ----------------------------------------------------------------

Minor changes:
- Added preview button for individual filters in the stack
- Minor bugfixes in Filters form


SSIMS_v0.3.1.2 ----------------------------------------------------------------

Minor changes:
- Added a negative image filter
- HSV filter now returns masked image instead of binary image
- Fixed sorting issue in Filters form


SSIMS_v0.3.1.1 ----------------------------------------------------------------

Minor changes:
- Camera matrix scaling factor changed to image width (W)


SSIMS_v0.3.1.0 ----------------------------------------------------------------

Major changes:
- Added a camera calibration workflow

Minor changes:
- Added a calibration chequerboard template to `camera_profiles` folder


SSIMS_v0.3.0.3 ----------------------------------------------------------------

Major changes:
- Fixed bug in Filter form where canceled filter does not properly return to the available filters list

Minor changes:
- Measure distance window now opens in full screen mode
- Added shebang lines for Linux
- Replaced a couple accidental backslashes in path strings
- Fixed DJI Mini 2 tangential distortion coeff's swap


SSIMS_v0.3.0.2 ----------------------------------------------------------------

Minor changes:
- Removed skew coefficient from camera profiles and GUI
- Reduced number of possible radial distortion coefficients from 6 to 3
- Transposed camera matrix to match OpenCV style
- Fixed issue of legend not showing in GCP selection plot for orthorectification


SSIMS_v0.3.0.1 ----------------------------------------------------------------

Major changes:
- Fixed imwrite() bug in stabilization script for OpenCV 4.5+

Minor changes:
- Added Laplacian filter for preprocessing
- Fixed problem where form would hang when Python was not found in %PATH%
- If Python not in %PATH%, environmental variable window not opens in Administrator mode