@@ -1,8 +1,8 @@
 [Updates]
-CurrentReleaseTag = v0.3.1.3
-CurrentReleaseName = SSIMS_v0.3.1.3
-CurrentReleaseDate = 2022-02-22 12:09:10.850825
-LastCheckDate = 2022-02-22 12:09:10.850825
+CurrentReleaseTag = v0.3.1.4
+CurrentReleaseName = SSIMS_v0.3.1.4
+CurrentReleaseDate = 2022-03-11 13:36:03.252079
+LastCheckDate = 2022-03-11 13:36:03.252079
 DisableUpdateCheck = 0
 PauseDays = 0
 
